mini-modification for mobile version

--- a/ClassWork/Template example(22.09.2019)/css/styles.css
+++ b/ClassWork/Template example(22.09.2019)/css/styles.css
@@ -125,10 +125,13 @@
   .hero-block .hero-block-information {
     display: flex;
     flex-direction: column;
+    align-items: center !important;
     margin: 20px !important;
   }
   .hero-block .hero-block-information img {
+    align-self: center !important;
     margin-right: 39px;
+    padding-right: 180px;
   }
   .hero-block .hero-block-information .hero-block-details {
     display: flex;
