--- a/ClassWork/Template example(22.09.2019)/css/styles.scss
+++ b/ClassWork/Template example(22.09.2019)/css/styles.scss
@@ -126,9 +126,12 @@
         .hero-block-information {
             display: flex;
             flex-direction: column;
+            align-items: center !important;
             margin: 20px!important;
             img {
+                align-self: center!important;
                 margin-right: 39px;
+                padding-right: 180px;
             }
             .hero-block-details {
                 display: flex;
