--- a/HomeWork/Template/css/style.css
+++ b/HomeWork/Template/css/style.css
@@ -1,17 +1,94 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @import 'mixin.scss';
- *   |         ^^^^^^^^^^^^
- *   '
- *   style.scss 1:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import 'mixin.scss';\d\a   \2502          ^^^^^^^^^^^^\a   \2575 \a   style.scss 1:9  root stylesheet";
+* {
+  font-family: "Libre Franklin", sans-serif;
 }
+
+.container {
+  width: 100%;
+}
+.container .hero-block {
+  width: 100%;
+  height: 100%;
+  font-family: "Libre Franklin", sans-serif;
+  background: no-repeat, rgba(198, 108, 73, 0.4);
+  background-image: url(../img/background.svg);
+  background-size: cover;
+  color: #ffffff;
+}
+.container .hero-block .header {
+  display: flex;
+}
+.container .hero-block .header .header__navigation {
+  margin: 39px 0px 0px 34px;
+  flex-grow: 1;
+  align-self: flex-end;
+}
+.container .hero-block .header .header__navigation img {
+  width: 24px;
+  height: 24px;
+}
+.container .hero-block .header .header__title {
+  flex-grow: 99;
+  margin: 36px 128px 0px 71px;
+  text-align: center;
+}
+.container .hero-block .header .header__title span {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.container .hero-block .hero-block__information {
+  display: flex;
+  flex-direction: column;
+}
+.container .hero-block .hero-block__information .hero-block__information__main-title {
+  margin-top: 50px;
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  font-size: 20px;
+  line-height: 24px;
+}
+.container .hero-block .hero-block__information .hero-block__information__second-title {
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  font-size: 13px;
+  line-height: 16px;
+}
+.container .hero-block .hero-block__information .hero-block__information__latest-works {
+  margin: 41px 0 50px 0;
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  font-size: 13px;
+  line-height: 16px;
+  text-decoration-line: underline;
+}
+.container .hero-block .hero-block__information .hero-block__information__latest-works a {
+  color: #ffffff;
+}
+.container .hero-block .hero-block__information .hero-block__information__latest-works a:hover {
+  font-size: 14px;
+  color: #fff3e6;
+}
+.container .about {
+  display: flex;
+  flex-direction: column;
+  color: #333333;
+}
+.container .about .about__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+}
+.container .about .about__information {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: justify;
+}
+
+/*# sourceMappingURL=style.css.map */
