--- a/HomeWork/Template/css/style.css
+++ b/HomeWork/Template/css/style.css
@@ -10,7 +10,7 @@
   height: 100%;
   font-family: "Libre Franklin", sans-serif;
   background: no-repeat, rgba(198, 108, 73, 0.4);
-  background-image: url(../img/background.svg);
+  background-image: url(../img/background-for-mobile.svg);
   background-size: cover;
   color: #ffffff;
 }
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   color: #333333;
+  font-family: "Libre Franklin", sans-serif;
 }
 .container .about .about__title {
   font-style: normal;
