--- a/HomeWork/Template/css/style.scss
+++ b/HomeWork/Template/css/style.scss
@@ -11,7 +11,7 @@
         height: 100%;
         font-family: $font_family;
         background: no-repeat, rgba(198, 108, 73, 0.4);
-        background-image: url(../img/background.svg);
+        background-image: url(../img/background-for-mobile.svg);
         background-size: cover;
         color: #ffffff;
         .header {
@@ -65,6 +65,7 @@
         display: flex;
         flex-direction: column;
         color: #333333;
+        font-family: $font_family;
         .about__title {
             font-style: normal;
             font-weight: 600;
