--- a/HomeWork/Template/css/mixin.scss
+++ b/HomeWork/Template/css/mixin.scss
@@ -5,3 +5,11 @@
     font-size: $font-size;
     line-height: $line_height;
 }
+
+@mixin font_style_weight_size_height_align($font-style, $font-weight, $font-size, $line_height, $text-align) {
+    font-style: $font-style;
+    font-weight: $font-weight;
+    font-size: $font-size;
+    line-height: $line_height;
+    text-align: $text-align;
+}
