--- a/HomeWork/Template/css/style.css
+++ b/HomeWork/Template/css/style.css
@@ -79,12 +79,15 @@
   font-family: "Libre Franklin", sans-serif;
 }
 .container .about .about__title {
+  margin-top: 25px;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
   line-height: 29px;
+  text-align: center;
 }
 .container .about .about__information {
+  margin: 19px 29px 8px 34px;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
