--- a/HomeWork/Template/css/style.scss
+++ b/HomeWork/Template/css/style.scss
@@ -6,6 +6,7 @@
 
 .container {
     width: 100%;
+    //start hero-block
     .hero-block {
         width: 100%;
         height: 100%;
@@ -14,6 +15,7 @@
         background-image: url(../img/background-for-mobile.svg);
         background-size: cover;
         color: #ffffff;
+        //start header
         .header {
             display: flex;
             .header__navigation {
@@ -37,6 +39,7 @@
                 }
             }
         } //close .header
+        // start hero-block__information
         .hero-block__information {
             display: flex;
             flex-direction: column;
@@ -61,23 +64,19 @@
             }
         } // close hero-block__information
     } //close hero-block
+    //start about
     .about {
         display: flex;
         flex-direction: column;
         color: #333333;
         font-family: $font_family;
         .about__title {
-            font-style: normal;
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 29px;
+            margin-top: 25px;
+            @include font_style_weight_size_height_align(normal, 600, 24px, 29px, center);
         }
         .about__information {
-            font-style: normal;
-            font-weight: normal;
-            font-size: 12px;
-            line-height: 15px;
-            text-align: justify;
+            margin: 19px 29px 8px 34px;
+            @include font_style_weight_size_height_align(normal, normal, 12px, 15px, justify);
         }
     } //close about
 } //close container
