--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -47,12 +47,15 @@
             </div>
             <div class="about__information">
                 <p>Lorem ipsum dolor sit amet, Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed. Consectetur adipiscing elit. Egestas porttitor
-                    nulla nulla egestas odio pharetra egestas aliquet mollis. Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed. Consectetur
-                    adipiscing elit. Egestas porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. diam penatibus aliquet tellus, in rutrum augue. Pellentesque.</p>
+                    nulla nulla egestas odio pharetra egestas aliquet mollis. <br><br> Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed.
+                    Consectetur adipiscing elit. Egestas porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. diam penatibus aliquet tellus, in rutrum augue. Pellentesque.</p>
             </div>
         </div>
         <!-- close about -->
-
+        <div class="skills">
+            <div class="profile-images"></div>
+            <div class="profile-details"></div>
+        </div>
     </div>
     <!-- close container -->
 </body>
