--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -52,10 +52,44 @@
             </div>
         </div>
         <!-- close about -->
+        <!-- start skills -->
         <div class="skills">
-            <div class="profile-images"></div>
-            <div class="profile-details"></div>
+            <div class="profile_title">
+                <span>
+                    Skills
+                </span>
+            </div>
+            <div class="profile-images"><img src="./img/profile-picture.svg" alt=""></div>
+            <div class="profile-details">
+                <div class="profile-details-block-left-side">
+                    <span class="col-1">Profile</span>
+                    <span class="col-2">Front-end Dev</span>
+                    <span class="col-3">Tools</span>
+                    <span class="col-4">UI Design</span>
+                    <span class="col-5">Tools</span>
+                    <span class="col-6">UX Research</span>
+                    <span class="col-7">Tools</span>
+
+                </div>
+                <div class="profile-details-block-right-side">
+                    <span class="col-1">UI / UX Engineer, Front-end Developer</span>
+                    <span class="col-2"><img src="./img/progress-bar.svg" alt=""></span>
+                    <span class="col-3">HTML, CSS, JS, Bootstrap, Reactols</span>
+                    <span class="col-4"><img src="./img/progress-bar.svg" alt=""></span>
+                    <span class="col-5">Adobe PS, AI, XD, Figma, InVision</span>
+                    <span class="col-6"><img src="./img/progress-bar.svg" alt=""></span>
+                    <span class="col-7">Paper, Pen, Balsamiq</span>
+                    <!-- <img src="./img/progress-bar.svg" alt=""> -->
+                </div>
+
+            </div>
         </div>
+        <!-- close skills -->
+        <!-- start portfolio -->
+        <div class="portfolio">
+
+        </div>
+        <!-- close portfolio -->
     </div>
     <!-- close container -->
 </body>
