--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -87,11 +87,53 @@
         <!-- close skills -->
         <!-- start portfolio -->
         <div class="portfolio">
+            <div class="portfolio__title">
+                <span class="portfolio__title-main">Portfolio</span>
+                <span class="portfolio__title-second">UX Research</span>
+            </div>
+            <div class="portfolio__info">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
+            </div>
+            <div class="portfolio__images">
+                <div class="side-left">
+                    <img class="h1" src="./img/portfolio_img-1.svg" alt="portfolio img-1">
+                    <img src="./img/portfolio_img-2.svg" alt="portfolio img-2">
 
+                </div>
+                <div class="side-right">
+                    <img class="h1" src="./img/portfolio_img-3.svg" alt="portfolio img-3">
+                    <img src="./img/portfolio_img-4.svg" alt="portfolio img-4">
+                </div>
+            </div>
+            <!-- close portfolio -->
+            <!-- start Get_in_touch -->
+            <div class="Get__in__touch">
+                <div class="Get__in__touch-title"><span>Get in Touch</span></div>
+                <div class="Get__in__touch-details">
+                    <div class="side left">
+                        <span>Dribbble</span>
+                        <span>Behance</span>
+                        <span>CodePen</span>
+                        <span>GitHub</span>
+                        <span>Medium</span>
+
+                    </div>
+                    <div class="side">
+                        <span>LinkedIn</span>
+                        <span>Facebook</span>
+                        <span>Instagram</span>
+                        <span>Twitter</span>
+                    </div>
+
+                </div>
+                <div class="Get__in__touch-footer">
+                    <p>seyrig@mailme.com <br> + 55 6645 665544</p>
+                    <span><img src="./img/arrow.svg" alt=""></span>
+                </div>
+            </div>
+            <!-- end Get_in_touch -->
         </div>
-        <!-- close portfolio -->
-    </div>
-    <!-- close container -->
+        <!-- close container -->
 </body>
 
 </html>
